--- a/kemal/shard.yml
+++ b/kemal/shard.yml
@@ -22,5 +22,7 @@ dependencies:
   sam:
     github: imdrasil/sam.cr
     version: "= 0.5.0"
+  crystagiri:
+    github: madeindjs/crystagiri
 
 license: MIT
