--- a/kemal/shard.yml
+++ b/kemal/shard.yml
@@ -24,5 +24,8 @@ dependencies:
     version: "= 0.5.0"
   crystagiri:
     github: madeindjs/crystagiri
+  webmock:
+    github: manastech/webmock.cr
+    branch: master
 
 license: MIT
